[package]
name = "fantasy_age_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.9.2"
regex = "1.12.2"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3.20"
anyhow = { version = "1.0", default-features = false }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
