[package]
name = "fantasy_age_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.7"
lambda_http = "0.7"
anyhow = "1.0"

