[package]
name = "fantasy_age_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["full"] }
rand = "0.9.2"
regex = "1.12.2"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3.20"
anyhow = { version = "1.0", default-features = false }
hyper = { version = "0.14", features = ["full"] }
bytes = "1"
